--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>tDispatcher</groupId>
     <artifactId>tDispatcher</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.4</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
